TP2/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> Axiom
Rule 1     Axiom -> Axiom Code
Rule 2     Axiom -> Axiom Function
Rule 3     Axiom -> <empty>
Rule 4     Code -> Code Block
Rule 5     Code -> Block
Rule 6     Block -> Exp ;
Rule 7     Block -> If
Rule 8     Block -> IfElse
Rule 9     Block -> While
Rule 10    Block -> Switch
Rule 11    Body -> { }
Rule 12    Body -> Block
Rule 13    Body -> { Code }
Rule 14    Function -> ID FunScope FunCases Body
Rule 15    FunScope -> :
Rule 16    FunCases -> FunExtra RARROW ID
Rule 17    FunCases -> RARROW ID
Rule 18    FunCases -> FunExtra
Rule 19    FunCases -> <empty>
Rule 20    FunExtra -> FunExtra , ID
Rule 21    FunExtra -> ID
Rule 22    IfScope -> IF
Rule 23    If -> IfScope Exp Body
Rule 24    ElseScope -> ELSE
Rule 25    IfElse -> IfScope Exp Body ElseScope Body
Rule 26    WhileScope -> WHILE
Rule 27    While -> WhileScope ( Exp ) Body
Rule 28    SwitchScope -> SWITCH
Rule 29    Switch -> SwitchScope Conds { Cases }
Rule 30    Conds -> Conds , Cond
Rule 31    Conds -> Cond
Rule 32    Cond -> ID ( AtribOp )
Rule 33    Cond -> ( AtribOp )
Rule 34    Cases -> Cases Case
Rule 35    Cases -> Case
Rule 36    Case -> ID : Body
Rule 37    Case -> : Body
Rule 38    Exp -> Atrib
Rule 39    Exp -> Op
Rule 40    Exp -> Decl
Rule 41    Exp -> DeclArray
Rule 42    Exp -> DeclAtrib
Rule 43    AtribOp -> AtribNum
Rule 44    AtribOp -> Op
Rule 45    Decl -> ID ID
Rule 46    DeclArray -> ID ID DeclArraySize
Rule 47    DeclArraySize -> DeclArraySize [ NUM ]
Rule 48    DeclArraySize -> <empty>
Rule 49    AtribArray -> ID ArraySize LARROW AtribOp
Rule 50    AtribArray -> AtribOp RARROW ID ArraySize
Rule 51    ArraySize -> ArraySize [ AtribOp ]
Rule 52    ArraySize -> <empty>
Rule 53    DeclAtrib -> ID ID LARROW AtribOp
Rule 54    DeclAtrib -> AtribOp RARROW ID ID
Rule 55    AtribNum -> ID LARROW AtribOp
Rule 56    AtribNum -> AtribOp LARROW ID
Rule 57    AtribNum -> AtribArray
Rule 58    Atrib -> ID LARROW AtribOp
Rule 59    Atrib -> AtribOp RARROW ID
Rule 60    Atrib -> ID SWAP ID
Rule 61    Atrib -> AtribArray
Rule 62    Op -> OpUno
Rule 63    Op -> OpBin
Rule 64    OpUno -> NEG AtribOp
Rule 65    OpUno -> AccessArray
Rule 66    OpUno -> SUB AtribOp
Rule 67    AccessArray -> ID ArraySize
Rule 68    OpBin -> OpBin OpLogico TermPlus
Rule 69    OpBin -> TermPlus
Rule 70    TermPlus -> TermPlus OpPlus TermMult
Rule 71    TermPlus -> TermMult
Rule 72    TermMult -> TermMult OpMult TermPow
Rule 73    TermMult -> TermPow
Rule 74    TermPow -> TermPow OpPow Base
Rule 75    TermPow -> Base
Rule 76    Base -> ( AtribOp )
Rule 77    Base -> ID
Rule 78    Base -> NUM
Rule 79    Base -> FunCall
Rule 80    FunCall -> ID ( FunArg )
Rule 81    FunArg -> FunRec
Rule 82    FunArg -> <empty>
Rule 83    FunRec -> FunRec , AtribOp
Rule 84    FunRec -> AtribOp
Rule 85    OpLogico -> AND
Rule 86    OpLogico -> OR
Rule 87    OpLogico -> LESSER
Rule 88    OpLogico -> GREATER
Rule 89    OpLogico -> LEQ
Rule 90    OpLogico -> GEQ
Rule 91    OpLogico -> EQUAL
Rule 92    OpPlus -> ADD
Rule 93    OpPlus -> SUB
Rule 94    OpMult -> MUL
Rule 95    OpMult -> DIV
Rule 96    OpPow -> POW

Terminals, with rules where they appear

(                    : 27 32 33 76 80
)                    : 27 32 33 76 80
,                    : 20 30 83
:                    : 15 36 37
;                    : 6
ADD                  : 92
AND                  : 85
DIV                  : 95
ELSE                 : 24
EQUAL                : 91
GEQ                  : 90
GREATER              : 88
ID                   : 14 16 17 20 21 32 36 45 45 46 46 49 50 53 53 54 54 55 56 58 59 60 60 67 77 80
IF                   : 22
LARROW               : 49 53 55 56 58
LEQ                  : 89
LESSER               : 87
MUL                  : 94
NEG                  : 64
NUM                  : 47 78
OR                   : 86
POW                  : 96
RARROW               : 16 17 50 54 59
SUB                  : 66 93
SWAP                 : 60
SWITCH               : 28
WHILE                : 26
[                    : 47 51
]                    : 47 51
error                : 
{                    : 11 13 29
}                    : 11 13 29

Nonterminals, with rules where they appear

AccessArray          : 65
ArraySize            : 49 50 51 67
Atrib                : 38
AtribArray           : 57 61
AtribNum             : 43
AtribOp              : 32 33 49 50 51 53 54 55 56 58 59 64 66 76 83 84
Axiom                : 1 2 0
Base                 : 74 75
Block                : 4 5 12
Body                 : 14 23 25 25 27 36 37
Case                 : 34 35
Cases                : 29 34
Code                 : 1 4 13
Cond                 : 30 31
Conds                : 29 30
Decl                 : 40
DeclArray            : 41
DeclArraySize        : 46 47
DeclAtrib            : 42
ElseScope            : 25
Exp                  : 6 23 25 27
FunArg               : 80
FunCall              : 79
FunCases             : 14
FunExtra             : 16 18 20
FunRec               : 81 83
FunScope             : 14
Function             : 2
If                   : 7
IfElse               : 8
IfScope              : 23 25
Op                   : 39 44
OpBin                : 63 68
OpLogico             : 68
OpMult               : 72
OpPlus               : 70
OpPow                : 74
OpUno                : 62
Switch               : 10
SwitchScope          : 29
TermMult             : 70 71 72
TermPlus             : 68 69 70
TermPow              : 72 73 74
While                : 9
WhileScope           : 27

Parsing method: LALR

state 0

    (0) S' -> . Axiom
    (1) Axiom -> . Axiom Code
    (2) Axiom -> . Axiom Function
    (3) Axiom -> .

    ID              reduce using rule 3 (Axiom -> .)
    IF              reduce using rule 3 (Axiom -> .)
    WHILE           reduce using rule 3 (Axiom -> .)
    SWITCH          reduce using rule 3 (Axiom -> .)
    NEG             reduce using rule 3 (Axiom -> .)
    SUB             reduce using rule 3 (Axiom -> .)
    (               reduce using rule 3 (Axiom -> .)
    NUM             reduce using rule 3 (Axiom -> .)
    $end            reduce using rule 3 (Axiom -> .)

    Axiom                          shift and go to state 1

state 1

    (0) S' -> Axiom .
    (1) Axiom -> Axiom . Code
    (2) Axiom -> Axiom . Function
    (4) Code -> . Code Block
    (5) Code -> . Block
    (14) Function -> . ID FunScope FunCases Body
    (6) Block -> . Exp ;
    (7) Block -> . If
    (8) Block -> . IfElse
    (9) Block -> . While
    (10) Block -> . Switch
    (38) Exp -> . Atrib
    (39) Exp -> . Op
    (40) Exp -> . Decl
    (41) Exp -> . DeclArray
    (42) Exp -> . DeclAtrib
    (23) If -> . IfScope Exp Body
    (25) IfElse -> . IfScope Exp Body ElseScope Body
    (27) While -> . WhileScope ( Exp ) Body
    (29) Switch -> . SwitchScope Conds { Cases }
    (58) Atrib -> . ID LARROW AtribOp
    (59) Atrib -> . AtribOp RARROW ID
    (60) Atrib -> . ID SWAP ID
    (61) Atrib -> . AtribArray
    (62) Op -> . OpUno
    (63) Op -> . OpBin
    (45) Decl -> . ID ID
    (46) DeclArray -> . ID ID DeclArraySize
    (53) DeclAtrib -> . ID ID LARROW AtribOp
    (54) DeclAtrib -> . AtribOp RARROW ID ID
    (22) IfScope -> . IF
    (26) WhileScope -> . WHILE
    (28) SwitchScope -> . SWITCH
    (43) AtribOp -> . AtribNum
    (44) AtribOp -> . Op
    (49) AtribArray -> . ID ArraySize LARROW AtribOp
    (50) AtribArray -> . AtribOp RARROW ID ArraySize
    (64) OpUno -> . NEG AtribOp
    (65) OpUno -> . AccessArray
    (66) OpUno -> . SUB AtribOp
    (68) OpBin -> . OpBin OpLogico TermPlus
    (69) OpBin -> . TermPlus
    (55) AtribNum -> . ID LARROW AtribOp
    (56) AtribNum -> . AtribOp LARROW ID
    (57) AtribNum -> . AtribArray
    (67) AccessArray -> . ID ArraySize
    (70) TermPlus -> . TermPlus OpPlus TermMult
    (71) TermPlus -> . TermMult
    (72) TermMult -> . TermMult OpMult TermPow
    (73) TermMult -> . TermPow
    (74) TermPow -> . TermPow OpPow Base
    (75) TermPow -> . Base
    (76) Base -> . ( AtribOp )
    (77) Base -> . ID
    (78) Base -> . NUM
    (79) Base -> . FunCall
    (80) FunCall -> . ID ( FunArg )

    ID              shift and go to state 5
    IF              shift and go to state 24
    WHILE           shift and go to state 25
    SWITCH          shift and go to state 26
    NEG             shift and go to state 28
    SUB             shift and go to state 30
    (               shift and go to state 18
    NUM             shift and go to state 35

    Code                           shift and go to state 2
    Function                       shift and go to state 3
    Block                          shift and go to state 4
    Exp                            shift and go to state 6
    If                             shift and go to state 7
    IfElse                         shift and go to state 8
    While                          shift and go to state 9
    Switch                         shift and go to state 10
    Atrib                          shift and go to state 11
    Op                             shift and go to state 12
    Decl                           shift and go to state 13
    DeclArray                      shift and go to state 14
    DeclAtrib                      shift and go to state 15
    IfScope                        shift and go to state 16
    WhileScope                     shift and go to state 17
    SwitchScope                    shift and go to state 19
    AtribOp                        shift and go to state 20
    AtribArray                     shift and go to state 21
    OpUno                          shift and go to state 22
    OpBin                          shift and go to state 23
    AtribNum                       shift and go to state 27
    AccessArray                    shift and go to state 29
    TermPlus                       shift and go to state 31
    TermMult                       shift and go to state 32
    TermPow                        shift and go to state 33
    Base                           shift and go to state 34
    FunCall                        shift and go to state 36

state 2

    (1) Axiom -> Axiom Code .
    (4) Code -> Code . Block
    (6) Block -> . Exp ;
    (7) Block -> . If
    (8) Block -> . IfElse
    (9) Block -> . While
    (10) Block -> . Switch
    (38) Exp -> . Atrib
    (39) Exp -> . Op
    (40) Exp -> . Decl
    (41) Exp -> . DeclArray
    (42) Exp -> . DeclAtrib
    (23) If -> . IfScope Exp Body
    (25) IfElse -> . IfScope Exp Body ElseScope Body
    (27) While -> . WhileScope ( Exp ) Body
    (29) Switch -> . SwitchScope Conds { Cases }
    (58) Atrib -> . ID LARROW AtribOp
    (59) Atrib -> . AtribOp RARROW ID
    (60) Atrib -> . ID SWAP ID
    (61) Atrib -> . AtribArray
    (62) Op -> . OpUno
    (63) Op -> . OpBin
    (45) Decl -> . ID ID
    (46) DeclArray -> . ID ID DeclArraySize
    (53) DeclAtrib -> . ID ID LARROW AtribOp
    (54) DeclAtrib -> . AtribOp RARROW ID ID
    (22) IfScope -> . IF
    (26) WhileScope -> . WHILE
    (28) SwitchScope -> . SWITCH
    (43) AtribOp -> . AtribNum
    (44) AtribOp -> . Op
    (49) AtribArray -> . ID ArraySize LARROW AtribOp
    (50) AtribArray -> . AtribOp RARROW ID ArraySize
    (64) OpUno -> . NEG AtribOp
    (65) OpUno -> . AccessArray
    (66) OpUno -> . SUB AtribOp
    (68) OpBin -> . OpBin OpLogico TermPlus
    (69) OpBin -> . TermPlus
    (55) AtribNum -> . ID LARROW AtribOp
    (56) AtribNum -> . AtribOp LARROW ID
    (57) AtribNum -> . AtribArray
    (67) AccessArray -> . ID ArraySize
    (70) TermPlus -> . TermPlus OpPlus TermMult
    (71) TermPlus -> . TermMult
    (72) TermMult -> . TermMult OpMult TermPow
    (73) TermMult -> . TermPow
    (74) TermPow -> . TermPow OpPow Base
    (75) TermPow -> . Base
    (76) Base -> . ( AtribOp )
    (77) Base -> . ID
    (78) Base -> . NUM
    (79) Base -> . FunCall
    (80) FunCall -> . ID ( FunArg )

  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for SWITCH resolved as shift
  ! shift/reduce conflict for NEG resolved as shift
  ! shift/reduce conflict for SUB resolved as shift
  ! shift/reduce conflict for ( resolved as shift
  ! shift/reduce conflict for NUM resolved as shift
    $end            reduce using rule 1 (Axiom -> Axiom Code .)
    ID              shift and go to state 38
    IF              shift and go to state 24
    WHILE           shift and go to state 25
    SWITCH          shift and go to state 26
    NEG             shift and go to state 28
    SUB             shift and go to state 30
    (               shift and go to state 18
    NUM             shift and go to state 35

  ! ID              [ reduce using rule 1 (Axiom -> Axiom Code .) ]
  ! IF              [ reduce using rule 1 (Axiom -> Axiom Code .) ]
  ! WHILE           [ reduce using rule 1 (Axiom -> Axiom Code .) ]
  ! SWITCH          [ reduce using rule 1 (Axiom -> Axiom Code .) ]
  ! NEG             [ reduce using rule 1 (Axiom -> Axiom Code .) ]
  ! SUB             [ reduce using rule 1 (Axiom -> Axiom Code .) ]
  ! (               [ reduce using rule 1 (Axiom -> Axiom Code .) ]
  ! NUM             [ reduce using rule 1 (Axiom -> Axiom Code .) ]

    Block                          shift and go to state 37
    Exp                            shift and go to state 6
    If                             shift and go to state 7
    IfElse                         shift and go to state 8
    While                          shift and go to state 9
    Switch                         shift and go to state 10
    Atrib                          shift and go to state 11
    Op                             shift and go to state 12
    Decl                           shift and go to state 13
    DeclArray                      shift and go to state 14
    DeclAtrib                      shift and go to state 15
    IfScope                        shift and go to state 16
    WhileScope                     shift and go to state 17
    SwitchScope                    shift and go to state 19
    AtribOp                        shift and go to state 20
    AtribArray                     shift and go to state 21
    OpUno                          shift and go to state 22
    OpBin                          shift and go to state 23
    AtribNum                       shift and go to state 27
    AccessArray                    shift and go to state 29
    TermPlus                       shift and go to state 31
    TermMult                       shift and go to state 32
    TermPow                        shift and go to state 33
    Base                           shift and go to state 34
    FunCall                        shift and go to state 36

state 3

    (2) Axiom -> Axiom Function .

    ID              reduce using rule 2 (Axiom -> Axiom Function .)
    IF              reduce using rule 2 (Axiom -> Axiom Function .)
    WHILE           reduce using rule 2 (Axiom -> Axiom Function .)
    SWITCH          reduce using rule 2 (Axiom -> Axiom Function .)
    NEG             reduce using rule 2 (Axiom -> Axiom Function .)
    SUB             reduce using rule 2 (Axiom -> Axiom Function .)
    (               reduce using rule 2 (Axiom -> Axiom Function .)
    NUM             reduce using rule 2 (Axiom -> Axiom Function .)
    $end            reduce using rule 2 (Axiom -> Axiom Function .)


state 4

    (5) Code -> Block .

    ID              reduce using rule 5 (Code -> Block .)
    IF              reduce using rule 5 (Code -> Block .)
    WHILE           reduce using rule 5 (Code -> Block .)
    SWITCH          reduce using rule 5 (Code -> Block .)
    NEG             reduce using rule 5 (Code -> Block .)
    SUB             reduce using rule 5 (Code -> Block .)
    (               reduce using rule 5 (Code -> Block .)
    NUM             reduce using rule 5 (Code -> Block .)
    $end            reduce using rule 5 (Code -> Block .)
    }               reduce using rule 5 (Code -> Block .)


state 5

    (14) Function -> ID . FunScope FunCases Body
    (58) Atrib -> ID . LARROW AtribOp
    (60) Atrib -> ID . SWAP ID
    (45) Decl -> ID . ID
    (46) DeclArray -> ID . ID DeclArraySize
    (53) DeclAtrib -> ID . ID LARROW AtribOp
    (49) AtribArray -> ID . ArraySize LARROW AtribOp
    (55) AtribNum -> ID . LARROW AtribOp
    (67) AccessArray -> ID . ArraySize
    (77) Base -> ID .
    (80) FunCall -> ID . ( FunArg )
    (15) FunScope -> . :
    (51) ArraySize -> . ArraySize [ AtribOp ]
    (52) ArraySize -> .

  ! shift/reduce conflict for LARROW resolved as shift
  ! shift/reduce conflict for LARROW resolved as shift
  ! reduce/reduce conflict for ; resolved using rule 52 (ArraySize -> .)
  ! reduce/reduce conflict for RARROW resolved using rule 52 (ArraySize -> .)
    LARROW          shift and go to state 41
    SWAP            shift and go to state 42
    ID              shift and go to state 39
    POW             reduce using rule 77 (Base -> ID .)
    MUL             reduce using rule 77 (Base -> ID .)
    DIV             reduce using rule 77 (Base -> ID .)
    ADD             reduce using rule 77 (Base -> ID .)
    SUB             reduce using rule 77 (Base -> ID .)
    AND             reduce using rule 77 (Base -> ID .)
    OR              reduce using rule 77 (Base -> ID .)
    LESSER          reduce using rule 77 (Base -> ID .)
    GREATER         reduce using rule 77 (Base -> ID .)
    LEQ             reduce using rule 77 (Base -> ID .)
    GEQ             reduce using rule 77 (Base -> ID .)
    EQUAL           reduce using rule 77 (Base -> ID .)
    (               shift and go to state 44
    :               shift and go to state 45
    [               reduce using rule 52 (ArraySize -> .)
    ;               reduce using rule 52 (ArraySize -> .)
    RARROW          reduce using rule 52 (ArraySize -> .)

  ! ;               [ reduce using rule 77 (Base -> ID .) ]
  ! RARROW          [ reduce using rule 77 (Base -> ID .) ]
  ! LARROW          [ reduce using rule 77 (Base -> ID .) ]
  ! LARROW          [ reduce using rule 52 (ArraySize -> .) ]

    FunScope                       shift and go to state 40
    ArraySize                      shift and go to state 43

state 6

    (6) Block -> Exp . ;

    ;               shift and go to state 46


state 7

    (7) Block -> If .

    ID              reduce using rule 7 (Block -> If .)
    IF              reduce using rule 7 (Block -> If .)
    WHILE           reduce using rule 7 (Block -> If .)
    SWITCH          reduce using rule 7 (Block -> If .)
    NEG             reduce using rule 7 (Block -> If .)
    SUB             reduce using rule 7 (Block -> If .)
    (               reduce using rule 7 (Block -> If .)
    NUM             reduce using rule 7 (Block -> If .)
    $end            reduce using rule 7 (Block -> If .)
    ELSE            reduce using rule 7 (Block -> If .)
    }               reduce using rule 7 (Block -> If .)
    :               reduce using rule 7 (Block -> If .)


state 8

    (8) Block -> IfElse .

    ID              reduce using rule 8 (Block -> IfElse .)
    IF              reduce using rule 8 (Block -> IfElse .)
    WHILE           reduce using rule 8 (Block -> IfElse .)
    SWITCH          reduce using rule 8 (Block -> IfElse .)
    NEG             reduce using rule 8 (Block -> IfElse .)
    SUB             reduce using rule 8 (Block -> IfElse .)
    (               reduce using rule 8 (Block -> IfElse .)
    NUM             reduce using rule 8 (Block -> IfElse .)
    $end            reduce using rule 8 (Block -> IfElse .)
    ELSE            reduce using rule 8 (Block -> IfElse .)
    }               reduce using rule 8 (Block -> IfElse .)
    :               reduce using rule 8 (Block -> IfElse .)


state 9

    (9) Block -> While .

    ID              reduce using rule 9 (Block -> While .)
    IF              reduce using rule 9 (Block -> While .)
    WHILE           reduce using rule 9 (Block -> While .)
    SWITCH          reduce using rule 9 (Block -> While .)
    NEG             reduce using rule 9 (Block -> While .)
    SUB             reduce using rule 9 (Block -> While .)
    (               reduce using rule 9 (Block -> While .)
    NUM             reduce using rule 9 (Block -> While .)
    $end            reduce using rule 9 (Block -> While .)
    ELSE            reduce using rule 9 (Block -> While .)
    }               reduce using rule 9 (Block -> While .)
    :               reduce using rule 9 (Block -> While .)


state 10

    (10) Block -> Switch .

    ID              reduce using rule 10 (Block -> Switch .)
    IF              reduce using rule 10 (Block -> Switch .)
    WHILE           reduce using rule 10 (Block -> Switch .)
    SWITCH          reduce using rule 10 (Block -> Switch .)
    NEG             reduce using rule 10 (Block -> Switch .)
    SUB             reduce using rule 10 (Block -> Switch .)
    (               reduce using rule 10 (Block -> Switch .)
    NUM             reduce using rule 10 (Block -> Switch .)
    $end            reduce using rule 10 (Block -> Switch .)
    ELSE            reduce using rule 10 (Block -> Switch .)
    }               reduce using rule 10 (Block -> Switch .)
    :               reduce using rule 10 (Block -> Switch .)


state 11

    (38) Exp -> Atrib .

    ;               reduce using rule 38 (Exp -> Atrib .)
    {               reduce using rule 38 (Exp -> Atrib .)
    ID              reduce using rule 38 (Exp -> Atrib .)
    IF              reduce using rule 38 (Exp -> Atrib .)
    WHILE           reduce using rule 38 (Exp -> Atrib .)
    SWITCH          reduce using rule 38 (Exp -> Atrib .)
    NEG             reduce using rule 38 (Exp -> Atrib .)
    SUB             reduce using rule 38 (Exp -> Atrib .)
    (               reduce using rule 38 (Exp -> Atrib .)
    NUM             reduce using rule 38 (Exp -> Atrib .)
    )               reduce using rule 38 (Exp -> Atrib .)


state 12

    (39) Exp -> Op .
    (44) AtribOp -> Op .

    ;               reduce using rule 39 (Exp -> Op .)
    {               reduce using rule 39 (Exp -> Op .)
    ID              reduce using rule 39 (Exp -> Op .)
    IF              reduce using rule 39 (Exp -> Op .)
    WHILE           reduce using rule 39 (Exp -> Op .)
    SWITCH          reduce using rule 39 (Exp -> Op .)
    NEG             reduce using rule 39 (Exp -> Op .)
    SUB             reduce using rule 39 (Exp -> Op .)
    (               reduce using rule 39 (Exp -> Op .)
    NUM             reduce using rule 39 (Exp -> Op .)
    )               reduce using rule 39 (Exp -> Op .)
    RARROW          reduce using rule 44 (AtribOp -> Op .)
    LARROW          reduce using rule 44 (AtribOp -> Op .)


state 13

    (40) Exp -> Decl .

    ;               reduce using rule 40 (Exp -> Decl .)
    {               reduce using rule 40 (Exp -> Decl .)
    ID              reduce using rule 40 (Exp -> Decl .)
    IF              reduce using rule 40 (Exp -> Decl .)
    WHILE           reduce using rule 40 (Exp -> Decl .)
    SWITCH          reduce using rule 40 (Exp -> Decl .)
    NEG             reduce using rule 40 (Exp -> Decl .)
    SUB             reduce using rule 40 (Exp -> Decl .)
    (               reduce using rule 40 (Exp -> Decl .)
    NUM             reduce using rule 40 (Exp -> Decl .)
    )               reduce using rule 40 (Exp -> Decl .)


state 14

    (41) Exp -> DeclArray .

    ;               reduce using rule 41 (Exp -> DeclArray .)
    {               reduce using rule 41 (Exp -> DeclArray .)
    ID              reduce using rule 41 (Exp -> DeclArray .)
    IF              reduce using rule 41 (Exp -> DeclArray .)
    WHILE           reduce using rule 41 (Exp -> DeclArray .)
    SWITCH          reduce using rule 41 (Exp -> DeclArray .)
    NEG             reduce using rule 41 (Exp -> DeclArray .)
    SUB             reduce using rule 41 (Exp -> DeclArray .)
    (               reduce using rule 41 (Exp -> DeclArray .)
    NUM             reduce using rule 41 (Exp -> DeclArray .)
    )               reduce using rule 41 (Exp -> DeclArray .)


state 15

    (42) Exp -> DeclAtrib .

    ;               reduce using rule 42 (Exp -> DeclAtrib .)
    {               reduce using rule 42 (Exp -> DeclAtrib .)
    ID              reduce using rule 42 (Exp -> DeclAtrib .)
    IF              reduce using rule 42 (Exp -> DeclAtrib .)
    WHILE           reduce using rule 42 (Exp -> DeclAtrib .)
    SWITCH          reduce using rule 42 (Exp -> DeclAtrib .)
    NEG             reduce using rule 42 (Exp -> DeclAtrib .)
    SUB             reduce using rule 42 (Exp -> DeclAtrib .)
    (               reduce using rule 42 (Exp -> DeclAtrib .)
    NUM             reduce using rule 42 (Exp -> DeclAtrib .)
    )               reduce using rule 42 (Exp -> DeclAtrib .)


state 16

    (23) If -> IfScope . Exp Body
    (25) IfElse -> IfScope . Exp Body ElseScope Body
    (38) Exp -> . Atrib
    (39) Exp -> . Op
    (40) Exp -> . Decl
    (41) Exp -> . DeclArray
    (42) Exp -> . DeclAtrib
    (58) Atrib -> . ID LARROW AtribOp
    (59) Atrib -> . AtribOp RARROW ID
    (60) Atrib -> . ID SWAP ID
    (61) Atrib -> . AtribArray
    (62) Op -> . OpUno
    (63) Op -> . OpBin
    (45) Decl -> . ID ID
    (46) DeclArray -> . ID ID DeclArraySize
    (53) DeclAtrib -> . ID ID LARROW AtribOp
    (54) DeclAtrib -> . AtribOp RARROW ID ID
    (43) AtribOp -> . AtribNum
    (44) AtribOp -> . Op
    (49) AtribArray -> . ID ArraySize LARROW AtribOp
    (50) AtribArray -> . AtribOp RARROW ID ArraySize
    (64) OpUno -> . NEG AtribOp
    (65) OpUno -> . AccessArray
    (66) OpUno -> . SUB AtribOp
    (68) OpBin -> . OpBin OpLogico TermPlus
    (69) OpBin -> . TermPlus
    (55) AtribNum -> . ID LARROW AtribOp
    (56) AtribNum -> . AtribOp LARROW ID
    (57) AtribNum -> . AtribArray
    (67) AccessArray -> . ID ArraySize
    (70) TermPlus -> . TermPlus OpPlus TermMult
    (71) TermPlus -> . TermMult
    (72) TermMult -> . TermMult OpMult TermPow
    (73) TermMult -> . TermPow
    (74) TermPow -> . TermPow OpPow Base
    (75) TermPow -> . Base
    (76) Base -> . ( AtribOp )
    (77) Base -> . ID
    (78) Base -> . NUM
    (79) Base -> . FunCall
    (80) FunCall -> . ID ( FunArg )

    ID              shift and go to state 38
    NEG             shift and go to state 28
    SUB             shift and go to state 30
    (               shift and go to state 18
    NUM             shift and go to state 35

    Exp                            shift and go to state 47
    Atrib                          shift and go to state 11
    Op                             shift and go to state 12
    Decl                           shift and go to state 13
    DeclArray                      shift and go to state 14
    DeclAtrib                      shift and go to state 15
    AtribOp                        shift and go to state 20
    AtribArray                     shift and go to state 21
    OpUno                          shift and go to state 22
    OpBin                          shift and go to state 23
    AtribNum                       shift and go to state 27
    AccessArray                    shift and go to state 29
    TermPlus                       shift and go to state 31
    TermMult                       shift and go to state 32
    TermPow                        shift and go to state 33
    Base                           shift and go to state 34
    FunCall                        shift and go to state 36

state 17

    (27) While -> WhileScope . ( Exp ) Body

    (               shift and go to state 48


state 18

    (76) Base -> ( . AtribOp )
    (43) AtribOp -> . AtribNum
    (44) AtribOp -> . Op
    (55) AtribNum -> . ID LARROW AtribOp
    (56) AtribNum -> . AtribOp LARROW ID
    (57) AtribNum -> . AtribArray
    (62) Op -> . OpUno
    (63) Op -> . OpBin
    (49) AtribArray -> . ID ArraySize LARROW AtribOp
    (50) AtribArray -> . AtribOp RARROW ID ArraySize
    (64) OpUno -> . NEG AtribOp
    (65) OpUno -> . AccessArray
    (66) OpUno -> . SUB AtribOp
    (68) OpBin -> . OpBin OpLogico TermPlus
    (69) OpBin -> . TermPlus
    (67) AccessArray -> . ID ArraySize
    (70) TermPlus -> . TermPlus OpPlus TermMult
    (71) TermPlus -> . TermMult
    (72) TermMult -> . TermMult OpMult TermPow
    (73) TermMult -> . TermPow
    (74) TermPow -> . TermPow OpPow Base
    (75) TermPow -> . Base
    (76) Base -> . ( AtribOp )
    (77) Base -> . ID
    (78) Base -> . NUM
    (79) Base -> . FunCall
    (80) FunCall -> . ID ( FunArg )

    ID              shift and go to state 51
    NEG             shift and go to state 28
    SUB             shift and go to state 30
    (               shift and go to state 18
    NUM             shift and go to state 35

    AtribOp                        shift and go to state 49
    AtribNum                       shift and go to state 27
    Op                             shift and go to state 50
    AtribArray                     shift and go to state 52
    OpUno                          shift and go to state 22
    OpBin                          shift and go to state 23
    AccessArray                    shift and go to state 29
    TermPlus                       shift and go to state 31
    TermMult                       shift and go to state 32
    TermPow                        shift and go to state 33
    Base                           shift and go to state 34
    FunCall                        shift and go to state 36

state 19

    (29) Switch -> SwitchScope . Conds { Cases }
    (30) Conds -> . Conds , Cond
    (31) Conds -> . Cond
    (32) Cond -> . ID ( AtribOp )
    (33) Cond -> . ( AtribOp )

    ID              shift and go to state 55
    (               shift and go to state 56

    Conds                          shift and go to state 53
    Cond                           shift and go to state 54

state 20

    (59) Atrib -> AtribOp . RARROW ID
    (54) DeclAtrib -> AtribOp . RARROW ID ID
    (50) AtribArray -> AtribOp . RARROW ID ArraySize
    (56) AtribNum -> AtribOp . LARROW ID

    RARROW          shift and go to state 57
    LARROW          shift and go to state 58


state 21

    (61) Atrib -> AtribArray .
    (57) AtribNum -> AtribArray .

    ;               reduce using rule 61 (Atrib -> AtribArray .)
    {               reduce using rule 61 (Atrib -> AtribArray .)
    ID              reduce using rule 61 (Atrib -> AtribArray .)
    IF              reduce using rule 61 (Atrib -> AtribArray .)
    WHILE           reduce using rule 61 (Atrib -> AtribArray .)
    SWITCH          reduce using rule 61 (Atrib -> AtribArray .)
    NEG             reduce using rule 61 (Atrib -> AtribArray .)
    SUB             reduce using rule 61 (Atrib -> AtribArray .)
    (               reduce using rule 61 (Atrib -> AtribArray .)
    NUM             reduce using rule 61 (Atrib -> AtribArray .)
    )               reduce using rule 61 (Atrib -> AtribArray .)
    RARROW          reduce using rule 57 (AtribNum -> AtribArray .)
    LARROW          reduce using rule 57 (AtribNum -> AtribArray .)


state 22

    (62) Op -> OpUno .

    ;               reduce using rule 62 (Op -> OpUno .)
    RARROW          reduce using rule 62 (Op -> OpUno .)
    LARROW          reduce using rule 62 (Op -> OpUno .)
    {               reduce using rule 62 (Op -> OpUno .)
    ID              reduce using rule 62 (Op -> OpUno .)
    IF              reduce using rule 62 (Op -> OpUno .)
    WHILE           reduce using rule 62 (Op -> OpUno .)
    SWITCH          reduce using rule 62 (Op -> OpUno .)
    NEG             reduce using rule 62 (Op -> OpUno .)
    SUB             reduce using rule 62 (Op -> OpUno .)
    (               reduce using rule 62 (Op -> OpUno .)
    NUM             reduce using rule 62 (Op -> OpUno .)
    )               reduce using rule 62 (Op -> OpUno .)
    ,               reduce using rule 62 (Op -> OpUno .)
    ]               reduce using rule 62 (Op -> OpUno .)


state 23

    (63) Op -> OpBin .
    (68) OpBin -> OpBin . OpLogico TermPlus
    (85) OpLogico -> . AND
    (86) OpLogico -> . OR
    (87) OpLogico -> . LESSER
    (88) OpLogico -> . GREATER
    (89) OpLogico -> . LEQ
    (90) OpLogico -> . GEQ
    (91) OpLogico -> . EQUAL
